--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -3,3 +3,4 @@ driver=org.postgresql.Driver
 url=jdbc:postgresql://localhost:5432/RaceTH
 username=postgres
 password=postgres
+referenceUrl=hibernate:hibernate.cfg.xml
