--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,9 @@
-changeLogFile=db.changelog-master.yaml
-driver=org.postgresql.Driver
+changeLogFile=changelog-master.yaml
 url=jdbc:postgresql://localhost:5432/RaceTH
-username=postgres
-password=postgres
-referenceUrl=hibernate:hibernate.cfg.xml
+driver=org.postgresql.Driver
+#url=jdbc:postgresql://localhost:5432/RaceTH
+liquibase.command.username=postgres
+liquibase.command.password=postgres
+liquibase.command.referenceUrl=hibernate:hibernate.cfg.xml
+liquibase.logLevel=DEBUG
+logFile=log.log
