--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,23 @@
                         <mainClass>com.lifehouse.raceth.Main</mainClass>
                     </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>
+                                java
+                            </goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.lifehouse.raceth.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
